# Enfuser

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  translation_cache.json
src/: OCR_Screenshot.py  clipboard.py  gui.py  keyboard_hotkeys.json  keyboard_hotkeys.py  translation_cache.json  translator.py  tts_core.py
uv/: pyvenv.cfg
